# Panda_LGP

./: README.md  poznamky.txt
ceres_testy/: CMakeLists.txt  package.xml
ceres_testy/include/ceres_testy/: collision_constraint.h  komo_objective.h  mu_loss_function.h  solver.h  visualize_rviz.h
ceres_testy/src/: collision_constraint.cpp  komo_objective.cpp  main_3dof_robot_komo.cpp  mu_loss_function.cpp  solver.cpp  visualize_rviz.cpp
gnuplot_module/: CMakeLists.txt  gnuplot_module-config.cmake  package.xml
gnuplot_module/include/gnuplot_module/: gnuplot_module.h
gnuplot_module/src/: gnuplot_module.cpp
ifopt_test/: CMakeLists.txt  package.xml
ifopt_test/include/ifopt_test/: test_constraints.h  test_dec_variable.h  test_objective.h  test_vars_constr_cost.h  tools_function.h
ifopt_test/src/: ex_test_ipopt.cc  main.cpp  manipulator.cpp  test_constraints.cpp  test_dec_variable.cpp  test_objective.cpp
ipopt_testy/: CMakeLists.txt  package.xml
ipopt_testy/include/ipopt_testy/: variables.h
ipopt_testy/src/: main.cpp  objective.cpp  variables.cpp
panda_gazebo_bringup/: CMakeLists.txt  package.xml
panda_gazebo_bringup/config/: model.rviz
panda_gazebo_bringup/launch/: panda_gazebo.launch
panda_gazebo_bringup/world/: box_collision.world  pick_grey_red_region.world
panda_gazebo_bringup/world/pick_grey_red_region/grey_region/grey_box/: model.config  model.sdf
panda_gazebo_bringup/world/pick_grey_red_region/red_region/red_region_box/: model.config  model.sdf
panda_gazebo_bringup/world/pick_grey_red_region/simple_pick_box/unit_box_0/: model.sdf
panda_gazebo_bringup/world/unit_box/: model.sdf
panda_gazebo_bringup/world/unit_box/unit_box/: model.sdf
panda_gazebo_controllers/: CMakeLists.txt  package.xml  panda_gazebo_controllers_plugin.xml
panda_gazebo_controllers/config/: panda_gazebo_controllers.yaml
panda_gazebo_controllers/include/panda_gazebo_controllers/: joint_position_controller.h
panda_gazebo_controllers/msg/: JointPosition.msg
panda_gazebo_controllers/src/: joint_position_controller.cpp
panda_ik_optim/: CMakeLists.txt  package.xml
panda_ik_optim/src/: main.cpp
panda_inverse_kinematics/: CMakeLists.txt  package.xml
panda_inverse_kinematics/include/panda_inverse_kinematics/: inverse_kinematics.h
panda_inverse_kinematics/include/panda_inverse_kinematics/constraints/: orientation_constraint.h  position_constraint.h
panda_inverse_kinematics/include/panda_inverse_kinematics/costs/: quadratic_error_cost.h
panda_inverse_kinematics/include/panda_inverse_kinematics/utils/: panda_kinematics.h
panda_inverse_kinematics/include/panda_inverse_kinematics/variables/: joints.h
panda_inverse_kinematics/launch/: inverse_kinematics_sliders.launch
panda_inverse_kinematics/src/: inverse_kinematics.cpp  main.cpp
panda_inverse_kinematics/src/constraints/: orientation_constraint.cpp  position_constraint.cpp
panda_inverse_kinematics/src/costs/: quadratic_error_cost.cpp
panda_inverse_kinematics/src/utils/: motion_planning_tools.cpp  panda_kinematics.cpp
panda_inverse_kinematics/src/variables/: joints.cpp
panda_komo_ipopt/: CMakeLists.txt  package.xml
panda_komo_ipopt/include/panda_komo_ipopt/: komo_lib.h
panda_komo_ipopt/include/panda_komo_ipopt/constraints/: add_point_to_point_distance.h
panda_komo_ipopt/include/panda_komo_ipopt/objectives/: komo_k2.h
panda_komo_ipopt/include/panda_komo_ipopt/utils/: motion_planning_tools.h
panda_komo_ipopt/include/panda_komo_ipopt/variables/: joints.h
panda_komo_ipopt/launch/: panda_komo_ipopt.launch
panda_komo_ipopt/src/: komo_lib.cpp  main.cpp
panda_komo_ipopt/src/constraints/: add_point_to_point_distance.cpp
panda_komo_ipopt/src/objectives/: komo_k2.cpp
panda_komo_ipopt/src/utils/: motion_planning_tools.cpp  panda_kinematics.cpp
panda_komo_ipopt/src/variables/: joints.cpp
panda_lgp/: CMakeLists.txt  README.md  package.xml
panda_lgp/include/panda_lgp/KOMO/: komo.h  komo_objective.h
panda_lgp/include/panda_lgp/action_skeleton/: operators.h  skeleton.h
panda_lgp/include/panda_lgp/constraints/: constraints.h
panda_lgp/include/panda_lgp/logic/: operators.h
panda_lgp/include/panda_lgp/utils/: kinematics.h  motion_ros_tools.h
panda_lgp/src/: main.cpp
panda_lgp/src/KOMO/: komo.cpp  komo_objective.cpp
panda_lgp/src/action_skeleton/: operators.cpp  skeleton.cpp
panda_lgp/src/constraints/: axis_in_region_constraint.cpp  manipulation_frame_constraint.cpp  z_axis_constraint.cpp
panda_lgp/src/logic/: operators.cpp
panda_lgp/src/utils/: kinematics.cpp  motion_ros_tools.cpp
panda_motion_planning/: CMakeLists.txt  package.xml
panda_motion_planning/include/panda_motion_planning/: komo_lib.h  panda_kinematics.h  simple_optim_mp.h
panda_motion_planning/include/panda_motion_planning/constraints/: add_fixed_orientation_axis.h  add_point_to_point_distance.h  constraints_list.h
panda_motion_planning/include/panda_motion_planning/objective/: komo_k2.h
panda_motion_planning/include/panda_motion_planning/utils/: panda_ik_analytic.h
panda_motion_planning/include/panda_motion_planning/variables/: joints.h
panda_motion_planning/launch/: motion_planning.launch
panda_motion_planning/src/: casadi_test.cpp  drake_test.cpp  ifopt_test.cpp  komo.cpp  komo_lib.cpp  motion_planning_tools.cpp  panda_kinematics.cpp  test.cpp  test_nlopt.cpp
panda_motion_planning/src/constraints/: add_fixed_orientation_axis.cpp  add_point_to_point_distance.cpp
panda_motion_planning/src/objective/: komo_k2.cpp
panda_motion_planning/src/utils/: motion_planning_tools.cpp  panda_kinematics.cpp
panda_motion_planning/src/variables/: joints.cpp
pose_sliders_publisher/: CMakeLists.txt  package.xml
pose_sliders_publisher/Forms/: mainwindow.ui
pose_sliders_publisher/Headers/: mainwindow.h
pose_sliders_publisher/Sources/: main.cpp  mainwindow.cpp
pose_sliders_publisher/launch/: gui.launch
