<?xml version="1.0"?>

<package format="3">
  <name>gnuplot_module</name>
  <version>0.0.1</version>
  <description>
  Package for gnuplot
  </description>
  
  <author>Tomas Merva</author>
  <maintainer email="tmerva7@gmail.com">Tomas Merva</maintainer>
  <license>BSD</license>
  

  <depend>eigen</depend>
  
  <!-- The following tags are recommended by REP-136 -->
  <exec_depend condition="$ROS_VERSION == 1">catkin</exec_depend>
  <buildtool_depend>cmake</buildtool_depend>
  <export>
    <build_type>cmake</build_type>
    <rosdoc config="${prefix}/doc/rosdoc.yaml"/>
  </export>
  
</package>