<?xml version="1.0"?>
<package format="2">
  <name>panda_komo_ipopt</name>
  <version>0.0.0</version>
  <description>The panda_komo_ipopt package</description>

  <maintainer email="tmerva7@gmail.com">tomas</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>panda_gazebo_controllers</depend>
  <depend>ifopt</depend>
  <depend>gnuplot_module</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
