<?xml version="1.0"?>
<package format="2">
  <name>panda_lgp</name>
  <version>0.0.0</version>
  <description>The panda_lgp package</description>


  <maintainer email="tomas@todo.todo">tomas</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>panda_gazebo_controllers</depend>
  <depend>ifopt</depend>
  <depend>gnuplot_module</depend>


  <export>

  </export>
</package>
