<?xml version="1.0"?>
<package format="2">
  <name>panda_motion_planning</name>
  <version>0.0.0</version>
  <description>The panda_motion_planning package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="tomas@todo.todo">tomas</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>panda_gazebo_controllers</depend>
  <depend>ifopt</depend>
  <depend>gnuplot_module</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
